# HOTOSM-Street-Level

./: .env_example  .gitignore  README.md  pyproject.toml
configs/: configs.py  data_collection_cfg.yaml  log_configs.py
data_collection/by_Maz/: README.md  get_data.py
