[project]
name = "hotosm-street-level"
version = "0.1.0"
description = "HOTOSM-Street-Level Imagery Analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.5",
    "notebook>=7.3.2",
    "rich>=13.9.4",
]
